<resources>
    <string name="app_name">TVF UNPAD</string>
    <string name="visi">“Menjadi pelaksana pendidikan tingkat sarjana yang memiliki komitmen keunggulan kompetitif bidang penelitian, pengembangan dan penguasaan teknologi bidang televisi dan film sebagai media komunikasi massa yang mampu bersaing di tingkat nasional, regional serta Internasional.″</string>
    <string name="misi">1. Melaksanakan pendidikan bidang televisi dan film sebagai media komunikasi massa pada jenjang sarjana dengan mengikuti perkembangan teknologi komunikasi dan perubahan sosial.\n2. Melakukan kegiatan penelitian dan publikasi ilmiah bidang televisi dan film yang sesuai dengan budaya Indonesia.\n3.Menyelenggarakan kegiatan pengabdian untuk memberdayakan masyarakat melalui pendekatan bidang televisi dan film yang edukatif.\n4. Menjalin kemitraan dengan stakeholder, lembaga pendidikan, lembaga riset dan asosiasi profesi pada tingkat lokal, nasional dan internasional dalam upaya meningkatkan kualitas pendidikan tinggi pertelevisian dan perfilman nasional.</string>
    <string name="akreditasi">Berdasarkan keputusan Badan Akreditasi Nasional Perguruan Tinggi Nomor 2967/SK/BAN-PT/Akred/SVIII/2017 tentang Status Akreditasi dan Peringkat Terakreditasi Program Studi Televisi dan Film pada Program Sarjana Universitas Padjadjaran, Bandung yang ditetapkan di Jakarta pada tanggal 22 Agustus 2017,<b> Program Studi Televisi dan Film, Fakultas Ilmu Komunikasi, Universitas Padjadjaran telah Terakreditasi “B”.</b></string>
    <string-array name="namadosen">
        <item>Dr. Aceng Abdullah, Drs., M.Si.</item>
        <item>Lilis Puspitasari, S.Sos., M.I.Kom.</item>
        <item>Evi Rosfiantika, S.Pd., M.Si.</item>
        <item>Jimi Narotama Mahameruaji, S.Sos., M.Si.</item>
        <item>Dr. Sri Seti Indriani, S.IP., M.Si.</item>
        <item>Rangga Saptya Mohamad Permana, S.I.Kom., M.I.Kom.</item>
        <item>Putri Limilia, S.I.Kom., M.Si.</item>
        <item>Dr. Santi Susanti, S.Sos., M.I.Kom.</item>
        <item>Abie Besman, S.Sos., M.Si.</item>
        <item>Fajar Syuderajat, S.Sos., M.Si.Psi.</item>
    </string-array>
    <string name="toolbar1"><b>TELEVISI DAN FILM</b>\nFakultas Ilmu Komunikasi</string>
    <string name="fikom">FIKOM</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="sejarah">\t\t\tPembukaan Program Studi Televisi dan Film Fakultas Ilmu Komunikasi Universitas Padjadjaran merupakan mandat pemerintah (DIKTI) kepada Universitas Padjadjaran untuk membuka Program Studi Televisi dan Film. Izin pendirian program studi berdasarkan Keputusan Menteri Pendidikan dan Kebudayaan Republik Indonesia Nomor 309/E/O/2014 tentang Izin Penyelenggaraan Program-program Studi Baru pada Universitas Padjadjaran di Bandung. Singkatnya, Program Studi Televisi dan Film, Fakultas Ilmu Komunikasi (Fikom) Universitas Padjadjaran (Unpad), berdiri berdasarkan Keputusan Menteri Pendidikan dan Kebudayaan RI no 309/E/O/2014 tertanggal 12 Agustus 2014 tentang Ijin Penyelenggaraan Program-program Studi Baru pada Universitas Padjadjaran yang ditandatangani Dirjen Pendidikan Tinggi, Joko Santoso.\n\t\t\tFikom Unpad juga merupakan fakultas ilmu komunikasi tertua di Indonesia dan satu-satunya fakultas yang berdiri di universitas negeri di Indonesia. Faklutas ini berdiri sejak tahun 1960. Pembukaan prodi baru ini merupakan mandat KemRistekDikti kepada Fikom Unpad untuk menyelenggarakan proses pendidikan tinggi bidang pertelevisian dan perfilman. Ditunjuknya Fikom Unpad selain karena fakultas ini telah menunjukkan kinerjanya dengan baik, baik dari segi akreditasi (A) maupun prestasi lainnya, juga selama ini pendidikan tinggi TV dan Film hampir semuanya berada di PT bidang Seni dan Budaya sehingga perspektif produk TV dan Film umumnya ke arah penciptaan karya seni, bukan sebagai produk media komunikasi massa.\n\t\t\tPeminat ke Prodi TV dan Film Fikom Unpad cukup besar. Pendaftar ke jalur SNMPTN pada tahun 2015 tercatat sebanyak 5.124 orang dan peminat ke jalur SBMPTN tercatat sebanyak 2.768 orang. Padahal jumlah mahasiswa baru yang diterima di prodi ini hanya 50 orang mahasiswa. Tahun 2016 peminatnya agak menurun, yakni sebanyak 4.752 orang peminat. Penurunan ini kemungkinan adanya kekhawatiran tingkat persaingan yang terlalu tinggi karena calon pendaftar saat mendaftar disuguhi data peminat di buku panduan pendaftaran. Besarnya peminat ke prodi ini sejalan dengan perkembangan industri media televisi dan perfilman nasional yang saat ini berkembang amat pesat. Ratusan trilyun rupiah setiap tahunnya bergulir di sektor ini. Sebagai contoh, untuk iklan televisi saja, tahun 2016 data dari P3I (Persatuan Perusahaan Periklanan Indonesia) mencapai lebih dari Rp 100 Trilyun. Tahun 2017 kue iklan nasional diperkirakan masih berkisar di angka yang sama. Menurut data dari AC Nielsen Research (2016), sekitar 96% menggunakan televisi untuk hiburan dan informasi.</string>
    <string name="pendahuluan">\t\tHIMA-TVF Fikom Unpad adalah lembaga kemahasiswaan tingkat fakultas yang terbuka bagi mahasiswa Strata 1 (S1) Program Studi Televisi dan Film yang berdiri pada 3 Juni 2016. Tujuan didirikannya HIMA-TVF adalah untuk menampung segala aspirasi mahasiswa prodi Televisi dan Film Fikom Unpad, mengembangkan minat dan bakat anggota HIMA-TVF Fikom Unpad, menjalin hubungan yang baik dengan internal maupun eksternal HIMA-TVF Fikom Unpad serta membangun karakter anggota yang kritis, kompeten, dan kreatif. Sedangkan Fungsi HIMA-TVF adalah sebagai tempat untuk menyalurkan minat dan bakat dan mediator aspirasi mahasiswa Televisi dan Film Fikom Unpad.\n\t\tSebagai sebuah organisasi yang baru berdiri, tentunya HIMA-TVF memiliki semangat optimis untuk membangun sebuah budaya baru di lingkungan Fikom Unpad serta menerapkan Tridharma perguruan tinggi dan tentunya berguna bagi nusa dan bangsa.</string>
    <string name="visimisihima"><b>Visi</b> :\nMewujudkan Himpunan Mahasiswa Televisi dan Film Fikom Unpad sebagai sarana bersenang-senang, wadah berkarya baik dalam bidang akademis maupun non-akademis dan edukasi yang berlandaskan kekeluargaan serta membangun citra HIMA-TVF kepada pihak eksternal.\n\n<b>Misi</b> :\n\t1. Menyempurnakan tata kelola kaderisasi sebagai gerbang pertama upaya menciptakan sense of belonging kepada anggota baru.\n\t2. Menjadikan HIMA-TVF Fikom Unpad sebagai rumah dan meningkatkan harmonisasi juga rasa kekeluargaan di lingkungan mahasiswa ilmu komunikasi.\n\t3. Mewadahi segala pengembangan potensi sumber daya anggota HIMA-TVF Fikom Unpad dalam bidang akademik maupun non-akademik.\n\t4. Menciptakan iklim organisasi yang positif berasaskan kekeluargaan yang harmonis dengan penuh komitmen.\n\t5. Memediasi anggota HIMA-TVF Fikom Unpad untuk berhubungan dengan pihak Prodi Televisi dan Film dalam urusan akademik dan non-akademik.</string>
    <string name="kineborasi1">\t\tKabinet Kineborasi adalah Kabinet Himpunan Mahasiswa Televisi dan Film Fakultas Ilmu Komunikasi Universitas Padjadjaran periode 2019/2020.Kineborasi merupakan singkatan dari <b>Kinerja Kolaborasi</b>.\n\t\tKinerja memiliki arti prestasi yang dicapai. Harapannya, selama satu periode ini kami dapat memberikan prestasi bagi program studi Televisi dan Film Universitas Padjadjaran, sedangkan Kolaborasi memiliki arti kerja sama. Artinya dalam mencapai tujuan yang diharapkan, kami senantiasa akan bekerja sama dengan seluruh anggota HIMA-TVF.\n\t\tKineborasi sendiri memiliki harapan untuk meraih tujuan yang dituju dengan cara berkolaborasi dengan seluruh anggota HIMA-TVF.</string>
    <string name="kineborasi2"><b>Visi</b> :\nMenjadikan HIMA sebagai wadah untuk keluarga besar Televisi dan Film \n<b>Misi</b> :\n1. Mengadakan Kegiatan yang meningkatkan Kekeluargaan dan Hubungan Antara Mahasiswa Televisi dan Film\n2. Menjadikan HIMA Wadah informasi untuk keluarga Televisi dan Film\n3. Meningkatkan SDM HIMA (Maupun HIMA tersendiri) dengan mengadakan kegiatan organisasi yang bersifat kekeluargaan\n4. Meningkatkan Pendapatan HIMA Televisi dan Film untuk memudahkan kegiatan yang akan dilaksanakan\n5. Meningkatkan Program Kerja yang telah ada menjadi lebih baik dan diminati\n6. Meningkatkan Empati dan Rasa Tanggung Jawab melalui kegiatan kaderisasi\n7. Meningkatkan Eksistensi HIMA dan Menjadi Wadah untuk Masyarakat</string>
    <string name="gedung1">Gedung 1 memiliki 2 lantai. Terdiri dari beberapa ruangan. Ruang Dekan dan Wakil Dekan, Ruang Manajer Pembelajaran, Kemahasiswaan, dan Alumni, Ruang Manajer Riset, Inovasi, dan Kemitraan. Laboratorium Humas, Sub Bagian Akademik, Kantor Internasional, Ruang Rapat, Ruang Oemi Abdurachman, Ruang Kepala Departemen, dan Ruang Kepegawaian.</string>
    <string name="gedung2">Gedung 2 memiliki 3 lantai yang terdiri dari beberapa ruang perkuliahan.</string>
    <string name="gedung3">Gedung 3 memiliki 3 lantai. Terdiri dari beberapa ruangan. Ruang Program Studi Manajemen Komunikasi, Ruang Program Studi Ilmu Informasi dan Perpustakaan, Ruang Program Studi Humas, Ruang Program Studi Jurnalistik, dan Laboratorium TV.</string>
    <string name="gedungpasca">Gedung Pascasarjana  terdiri dari beberapa ruangan. Ruang Program Studi Magister Ilmu Komunikasi, Ruang Program Studi Doktor Ilmu Komunikasi, Ruang Perpustakaan, Ruang Auditorium Pascasarjana, Laboratorium Fotografi, dan Laboratorium Newsroom.</string>
    <string name="perpus">Perpustakaan dan Pusat Informasi Ilmiah (P2I2) Fikom Unpad berdiri di atas gedung Pascasarjana lantai 1. P2I2 Fikom Unpad pada saat ini menyediakan layanan buku komunikasi, skripsi, makalah, seminar, jurnal, koran, majalah, penyediaan informasi dalam bentuk CD-ROM serta layanan internet.\nPemanfaatan teknologi yang telah dilakukan perpustakaan memberikan kemudahan kepada para pembaca untuk mencari informasi yang dibutuhkan. Fasilitas Perpustakaan meliputi Ruang Baca, Penyalinan File, Ruang Jurnal, dan Ruang Skripsi.</string>
    <string name="student">Gedung ini terletak di lantai dasar gedung C yang mempunyai fasilitas pendukung lainnya, seperti hotspot area, komputer untuk mahasiswa, cafe mahasiswa, dan books center. Student Center merupakan tempat favorit mahasiswa, karena berbagai kegiatan mahasiswa diadakan di ruang ini. Kegiatan yang kerap digelar diantaranya adalah bazar, forum diskusi mahasiswa, serta praktek UMKM.</string>
    <string name="lab1">Laboratorium Grafika memiliki perlengkapan yang memadai untuk menunjang kegiatan desain grafis dan produksi cetak. Laboratorium Grafika merupakan studio desain yang memiliki 36 unit komputer desain dan editing, plotter, Scanner, meja gambar manual, peralatan produksi seperti mesin cetak mini offset, mesin hand press, mesin potong kertas, plate maker, dan studio sablon.\nLaboratorium ini memberi kesempatan kepada mahasiswa untuk memperoleh kemampuan praktis sebagai berikut :\n\t1. Mampu merencanakan/mendesain media komunikasi visual/grafis dengan berbagai teknik baik manual maupun teknik komputer\n\t2. Mampu memproduksi media komunikasi visual/grafis dalam berbagai bentuk seperti poster, brochure, majalah, surat kabar, spanduk, baliho, x-banner, baik dengan teknik sablon maupun dengan teknik cetak.</string>
    <string name="lab2">Laboratorium Humas memiliki fungsi untuk membantu proses pembelajaran di Program Studi Hubungan Masyarakat. Terdapat sejumlah mata kuliah praktis yang wajib dikuasai calon sarjana Hubungan Masyarakat. Mata kuliah yang terkait dengan laboratorium humas adalah sebagai berikut :\n\t- Public Relations Event\n\t- Marketing Public Relations\n\t- PR Writing\n\t- Komunikasi Visual.</string>
    <string name="lainnya">\t1. Masjid Al-Wushul\n\t2. Mushola\n\t3. Auditorium\n\t4. Amphitheatre\n\t5. Aula\n\t6. Sarana parkir\n\t7. Sarana olahraga (lapangan bulutangkis, lapangan futsal, lapangan bola basket dan bola volley, papan panjat/climbing wall)\n\t8. Gazebo\n\t9. Kantin, dan\n\t10. Toilet.</string>
</resources>