<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fasilitas">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/teks_akreditasi"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/toolbar2_text"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:gravity="center"
            android:text="Fasilitas"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="1dp">

            <Button android:id="@+id/gedung1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Gedung 1"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/toolbar2"
                tools:ignore="NotSibling" />

            <ImageView
                android:id="@+id/gambargedung1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/gedung1"
                app:layout_constraintTop_toBottomOf="@id/gedung1"/>

            <TextView
                android:id="@+id/teksgedung1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/gedung1"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gambargedung1" />

            <Button
                android:id="@+id/gedung2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Gedung 2"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/teksgedung1"/>

            <ImageView
                android:id="@+id/gambargedung2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/gedung2"
                app:layout_constraintTop_toBottomOf="@id/gedung2"/>

            <TextView
                android:id="@+id/teksgedung2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/gedung2"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gambargedung2" />

            <Button
                android:id="@+id/gedung3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Gedung 3"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/teksgedung2"/>

            <TextView
                android:id="@+id/teksgedung3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/gedung3"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gedung3" />

            <Button
                android:id="@+id/gedungpasca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Gedung Pasca Serjana"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/teksgedung3"/>

            <ImageView
                android:id="@+id/gambargedungpasca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/gedungpasca"
                app:layout_constraintTop_toBottomOf="@id/gedungpasca"/>

            <TextView
                android:id="@+id/teksgedungpasca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/gedungpasca"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gambargedungpasca" />

            <Button
                android:id="@+id/perpus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Perpustakaan"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/teksgedungpasca"/>

            <ImageView
                android:id="@+id/gambarperpus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/perpus"
                app:layout_constraintTop_toBottomOf="@id/perpus"/>

            <TextView
                android:id="@+id/teksperpus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/perpus"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gambarperpus" />

            <Button
                android:id="@+id/student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Student Center"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/teksperpus"/>

            <ImageView
                android:id="@+id/gambarstudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/student"
                app:layout_constraintTop_toBottomOf="@id/student"/>

            <TextView
                android:id="@+id/teksstudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/student"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gambarstudent" />

            <Button
                android:id="@+id/lab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Laboratorium"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/teksstudent"/>

            <ImageView
                android:id="@+id/gambarlab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/lab1"
                app:layout_constraintTop_toBottomOf="@id/lab"/>

            <TextView
                android:id="@+id/tekslab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/lab1"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gambarlab1" />

            <ImageView
                android:id="@+id/gambarlab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/lab2"
                app:layout_constraintTop_toBottomOf="@id/tekslab1"/>

            <TextView
                android:id="@+id/tekslab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/lab2"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gambarlab2" />

            <Button
                android:id="@+id/lainnya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Lainnya"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/tekslab2"/>

            <TextView
                android:id="@+id/tekslainnya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/lainnya"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lainnya" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>