<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HimpunanMahasiswa">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/himatvf"
        tools:ignore="MissingConstraints,NotSibling">

        <TextView
            android:id="@+id/toolbar2_text"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:text="Himpunan Mahasiswa"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="1dp">

            <Button
                android:id="@+id/himatvf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Hima-TVF"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/toolbar2"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/pendahuluan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/pendahuluan"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/himatvf" />

            <Button
                android:id="@+id/visimisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Visi - Misi"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/pendahuluan"/>

            <TextView
                android:id="@+id/visimisihima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/visimisihima"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/visimisi" />

            <Button
                android:id="@+id/kineborasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEA37A"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Kabinet Kineborasi"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/visimisihima"/>

            <TextView
                android:id="@+id/kineborasi1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/kineborasi1"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kineborasi" />

            <TextView
                android:id="@+id/visimisikabinet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:text="VISI - MISI"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/kineborasi1"/>

            <TextView
                android:id="@+id/kineborasi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/kineborasi2"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/visimisikabinet" />

            <TextView
                android:id="@+id/strukturkabinet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:text="STRUKTUR KABINET"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/kineborasi2"/>

            <ImageView
                android:id="@+id/gambarlogohima"
                android:layout_width="360dp"
                android:layout_height="360dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/strukturkabinet"
                app:srcCompat="@drawable/kineborasi"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
